--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,3 +31,15 @@ body {
     text-wrap: balance;
   }
 }
+
+.top-animate{
+  animation: marquee 10s linear infinite;
+}
+@keyframes marquee {
+  0% {
+      transform: translateY(0%);
+  }
+  100% {
+      transform: translateY(-20%);
+  }
+}
