--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,23 +8,8 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+
 
 @layer utilities {
   .text-balance {
@@ -43,3 +28,47 @@ body {
       transform: translateY(-20%);
   }
 }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.text-wrapper{
+  text-align: center;
+
+}
+.text-wrapper {
+width: full;
+height: 80px;
+color: black;
+
+position: relative;
+
+background-color: #fff4df;
+animation-name: example;
+animation-duration: 10s;
+animation-iteration-count: infinite; /* Make the animation infinite */
+animation-timing-function: ease-in-out; /* Optional: makes the animation smoother */
+}
+
+@keyframes example {
+0%   {color: black; right: 0px; top: 0px;text-align: center;}
+50%  {color: black; right: 200px; top: 0px;text-align: center;}
+100% {color: black; right: 0px; top: 0px;text-align: center;}
+} 
+
+@media screen and (max-width: 576px) {
+  @keyframes example {
+    0%   {color: black; right: 0px; top: 0px;text-align: center;}
+    50%  {color: black; right: 100px; top: 0px;text-align: center;}
+    100% {color: black; right: 0px; top: 0px;text-align: center;}
+    } 
+}
+
+/* @media screen and (min-width: 1024px) {
+  .card {
+   
+  grid-template-columns: repeat(3, 1fr);
+ 
+  }
+} */
